Remove usage of deprecated new Integer in org.eclipse.equinox.launcher
Change-Id: I8b40798edda6707eb91f338413c12693957500cf
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>